fixed sponsors overflow
fixed overflow due to paddin in x axis

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ video {
 .sponsors-wrapper {
   width: 100%;
   background-color: #414246;
-  padding: 40px;
+  padding: 40px 0;
 }
 
 footer {
